src/components/Main/Main.css
main {
  display: flex;
  flex-direction: column;
  background-color: #f5f6f7;
  padding: 0px;
}

.main__header {
  /* max-width: 712px;
  width: 100%;
  height: 46px; */
  font-weight: 400;
  font-size: 40px;
  line-height: 46px;
  color: #1a1822;
  margin: 80px 0px 0px;
  padding-left: 104px;
}

.main__header_hidden_hidden {
  display: none;
}

.main__card-wrap {
  display: grid;
  grid-template-columns: repeat(3, minmax(0, 1fr));
  gap: 16px;
  /* width: calc(
    3 * 400px + 2 * 16px
  ); */
  /* max-width: 100%; */
  padding: 0 104px;
  margin: 64px auto;
}

.main__card-wrap_hidden {
  display: none;
}

.main__button {
  max-width: 288px;
  width: 100%;
  height: 64px;
  border-radius: 80px;
  background-color: #fff;
  margin: 0 auto 80px;
  color: #1a1822;
  font-family: "Roboto";
  font-weight: 500;
  font-size: 18px;
  line-height: 24px;
}

.main__button:hover {
  background-color: #e9e8e8;
}

.main__button_inactive {
  background-color: #e6e8eb;
  color: #b6bcbf;
}

@media (max-width: 768px) {
  .main__header {
    margin-top: 40px;
    padding-left: 40px;
    font-size: 30px;
    line-height: 34px;
  }

  .main__card-wrap {
    display: flex;
    padding: 0px 40px;
    flex-direction: row;
    width: 100%;
    gap: 8px;
    margin: 32px auto;
  }

  .main__button {
    width: 240px;
    height: 56px;
    margin-bottom: 40px;
  }
}

@media screen and (max-width: 320px) {
  .main__header {
    margin-top: 32px;
    padding-left: 16px;
  }

  .main__card-wrap {
    flex-direction: column;
    margin-top: 58px;
    margin-bottom: 16px;
  }

  .main__button {
    width: 288px;
    height: 56px;
    margin-bottom: 24px;
    font-size: 18px;
    line-height: 24px;
  }
}

